# python-icap

./: .gitignore  .pre-commit-config.yaml  BRANCH_REVIEW.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  LLMS.txt  Makefile  PROJECT_ROADMAP.md  README.md  SECURITY.md  SUMMARY.md  justfile  noxfile.py  pyproject.toml  setup.py  tox.ini
.claude/: CLAUDE.md
.claude/agents/: docs-researcher.md  git-expert.md  python-expert.md
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  dependency-review.yml  labeler.yml  lint.yml  pr-title.yml  publish.yml  release-drafter.yml  test.yml  typecheck.yml
docker/: Dockerfile  README.md  c-icap.conf  docker-compose.yml  start.sh
docker/certs/: .gitignore
docs/design/: icap-mock-patching.md
examples/: basic_example.py  integration_test.py  lambda_handler.py  test_utils.py
py_cap/: __init__.py  async_icap.py  exception.py  icap.py
pycap/: __init__.py  _protocol.py  async_icap.py  exception.py  icap.py  request.py  response.py
pytest_py_cap/: __init__.py  builder.py  mock.py  plugin.py
pytest_pycap/: __init__.py  builder.py  mock.py  plugin.py
src/icap/: __init__.py  _protocol.py  async_icap.py  icap.py  response.py
src/icap/pytest_plugin/: call_record.py  matchers.py  mock.py  mock_async.py  mock_client.py  protocols.py
tests/: conftest.py  helpers.py  test_async_integration.py  test_benchmarks.py  test_client_methods.py  test_concurrent_load.py  test_connection_robustness.py  test_error_handling.py  test_fuzzing.py  test_helpers.py  test_icap.py  test_integration.py  test_large_files.py  test_mock_plugin.py  test_pytest_plugin.py  test_response.py  test_ssl_integration.py
