[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycap"
version = "0.1.0"
description = "Python ICAP (Internet Content Adaptation Protocol) Client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CaptainDriftwood"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []
keywords = [
    "icap",
    "antivirus",
    "clamav",
    "content-adaptation",
    "security",
    "virus-scanning",
    "squid",
]

[project.urls]
Homepage = "https://github.com/CaptainDriftwood/pycap"
Repository = "https://github.com/CaptainDriftwood/pycap"

[project.entry-points.pytest11]
pycap = "pytest_pycap.plugin"

[tool.hatch.build.targets.wheel]
packages = ["pycap", "pytest_pycap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
timeout = 120  # Default timeout for all tests (seconds)
timeout_method = "thread"  # Use thread-based timeout for better compatibility
filterwarnings = [
    # Ignore deprecation warning from testcontainers internals
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pycap"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "testcontainers>=3.7.0",
    "ty>=0.0.8",
]
