[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-icap"
version = "0.1.2"
description = "Python ICAP (Internet Content Adaptation Protocol) Client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CaptainDriftwood"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []
keywords = [
    "icap",
    "antivirus",
    "clamav",
    "content-adaptation",
    "security",
    "virus-scanning",
    "squid",
]

[project.urls]
Homepage = "https://github.com/CaptainDriftwood/python-icap"
Repository = "https://github.com/CaptainDriftwood/python-icap"

[project.entry-points.pytest11]
icap = "icap.pytest_plugin.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/icap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "docker: marks tests requiring Docker (deselect with '-m \"not docker\"')",
    "ssl: marks tests requiring SSL/TLS certificates (run: just generate-certs)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks performance benchmark tests (run: just benchmark)",
    "icap(host, port, timeout, ssl_context): configure ICAP client for testing",
    "icap_mock(response, virus_name, raises, options, respmod, reqmod): configure mock ICAP client",
]
timeout = 120  # Default timeout for all tests (seconds)
timeout_method = "thread"  # Use thread-based timeout for better compatibility
filterwarnings = [
    # Ignore deprecation warning from testcontainers internals
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
    # Ignore pytest-asyncio warning in pytester subprocess tests (our main config has it set)
    "ignore:The configuration option \"asyncio_default_fixture_loop_scope\" is unset:pytest.PytestDeprecationWarning",
    # Ignore pytest-benchmark warning when running with xdist (benchmarks are excluded from parallel runs)
    "ignore:Benchmarks are automatically disabled because xdist plugin is active:pytest_benchmark.logger.PytestBenchmarkWarning",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["icap"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "coverage[toml]>=7.0.0",
    "hypothesis>=6.0.0",
    "nox>=2024.0.0",
    "nox-uv>=0.2.0; python_version >= '3.9'",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "rembg[cli,cpu]>=2.0.61",
    "ruff>=0.1.0",
    "setuptools>=75.3.2",  # Required for PyCharm's test runner
    "testcontainers>=4.0.0; python_version >= '3.9'",
    "ty>=0.0.8",
]

[tool.coverage.run]
source = ["icap"]
branch = true
parallel = true
omit = [
    # Import-time only files - executed before coverage starts
    "*/icap/__init__.py",
    "*/icap/exception.py",
    "*/icap/pytest_plugin/plugin.py",
    # Base protocol class - only tested via subclasses in integration tests
    "*/icap/_protocol.py",
]

[tool.coverage.report]
# Show missing line numbers in terminal output
show_missing = true

# Don't clutter report with fully-covered files
skip_covered = true

# Don't show files with no executable statements
skip_empty = true

exclude_lines = [
    # Standard pragmas
    "pragma: no cover",

    # Type checking imports (never executed at runtime)
    "if TYPE_CHECKING:",

    # Main script guard
    "if __name__ == .__main__.:",

    # Abstract method markers
    "raise NotImplementedError",
    "@abstractmethod",

    # Ellipsis (used in stubs/protocols)
    "^\\s*\\.\\.\\.$",

    # Pass statements (empty implementations)
    "^\\s*pass\\s*$",

    # Simple property getters/setters returning private attributes
    "^\\s*return self\\._\\w+\\s*$",

    # Defensive assertions that shouldn't trigger
    "raise AssertionError",

    # Docstring delimiters
    '^\\s*"""',
    "^\\s*'''",
    '^\\s*r"""',
    "^\\s*r'''",

    # Docstring section headers (Google/NumPy style)
    "^\\s*Args:\\s*$",
    "^\\s*Returns:\\s*$",
    "^\\s*Raises:\\s*$",
    "^\\s*Example:\\s*$",
    "^\\s*Examples:\\s*$",
    "^\\s*Attributes:\\s*$",
    "^\\s*Note:\\s*$",
    "^\\s*See Also:\\s*$",

    # Doctest examples in docstrings
    "^\\s*>>>",
    "^\\s*\\.\\.\\.",
]
